Init project dep upgrades and testing restructure